--- a/www/index.html
+++ b/www/index.html
@@ -44,11 +44,11 @@
                 <form action="main.html" method="post">
                     <h3>Email<input type="email" name="mail"></h3>
                     <h3>Password<input type="password" name="pass"></h3>
-                    <input type="submit"/>
+                    <input type="submit" value="Login"/>
                 </form>
                 <div id="member-links">
-                    <a src="members/add">New User</a>
-                    <a src="member/password">Forgot Password</a>
+                    <a href="member/create.html">New User</a>
+                    <a href="member/password">Forgot Password</a>
                 </div>
             </div>
         </div>
