--- a/platforms/android/assets/www/member/create.html
+++ b/platforms/android/assets/www/member/create.html
@@ -71,20 +71,14 @@
             url: url + "/addUser.php",
             data: {username: $username, mail: $email, pass: $pass, name: $name, famName: $famName},
             success: function (result) {
-                $('#error').html("<p>gelukt</p>");
-                console.log(result);
+                document.cookie = result;
+                window.location.replace("Main.html");
             },
             error: function (xhr, status, error) {
                 $('#error').html("<p>-- ERROR IN AJAX --\n\n" + xhr.responseText+"</p>");
             }
         });
     });
-
-    /*function checkRequired(){
-        $username = $('input[name=username]').val();
-        $email = $('input[name=mail]').val();
-        return true;
-    }*/
 </script>
 </body>
 </html>
